# fooyin-vim-plugin

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vimmotions.json.in
.devcontainer/: Dockerfile  devcontainer.json  opencode.json  tui.json
.plan/: 01-vim-plugin-draft.md  02-bugs.md  03-future-improvements.md  03-global-marks-api.md  04-mark-indicator-virtual-column-api.md  04-undo-redo-fooyin-pr.md  05-playlist-organiser-tree-navigation.md  06-slash-search.md  07-slash-search-impl.md  08-configurable-bindings.md  09-per-playlist-cursor-position.md  10-upstream-public-playlist-tab-api.md  11-playlist-organiser-yank-paste.md  12-playlist-organiser-undo-redo.md  13-empty-playlist-spatial-paste-public-api.md  14-settings-ui.md  15-binding-scopes.md  vim-plugin-draft.md
build1/: Makefile  vimmotions.json
build1/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/: searchnavigation.h  spatialnavigator.cpp  spatialnavigator.h  viewlocator.cpp  viewlocator.h  vimactions.cpp  vimactions.h  vimbindingparser.cpp  vimbindingparser.h  vimclipboard.cpp  vimclipboard.h  vimhandler.cpp  vimhandler.h  vimlog.h  vimmarkvariableprovider.cpp  vimmarkvariableprovider.h  vimmodeindicatorwidget.cpp  vimmodeindicatorwidget.h  vimmotionsbindingbackend.cpp  vimmotionsbindingbackend.h  vimmotionsplugin.cpp  vimmotionsplugin.h  vimmotionssettings.cpp  vimmotionssettings.h  vimmotionssettingsdialog.cpp  vimmotionssettingsdialog.h  vimsearchbar.cpp  vimsearchbar.h
tests/: CMakeLists.txt  bindingintegrationtest.cpp  bindingparsertest.cpp  searchnavigationtest.cpp  vimhandlertimeouttest.cpp  vimhandlerviewcontexttest.cpp  vimmotionssettingsdialogtest.cpp
